--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -2,6 +2,51 @@ body {
     position: relative;
 }
 
+.head {
+    text-align: center;
+}
+
+.grid-container {
+    display: grid;
+    grid-gap: 80px;
+    grid-template-columns: repeat(3, 250px);
+    grid-template-rows: repeat(4, 100px);
+    justify-content: center;
+}
+
+.card {
+    display: flex;
+    border: 1px solid darkgrey;
+    border-radius: 10px;
+    width: 320px;
+    height: 120px;
+}
+
+.avatar {
+    margin-top: 15px;
+    border-radius: 50%;
+    margin-left: 15px;
+    height: 100px;
+}
+
+.name {
+    padding-top: 10px;
+    font-size: 20px;
+    margin-bottom: 0;
+}
+
+.text-container {
+    padding-left: 15px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.email,
+.address {
+    margin: 0;
+    padding: 0;
+}
+
 .overlay {
     position: absolute;
     top: 0;
