--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -9,8 +9,8 @@ body {
 .grid-container {
     display: grid;
     grid-gap: 80px;
-    grid-template-columns: repeat(3, 250px);
-    grid-template-rows: repeat(4, 100px);
+    grid-template-columns: repeat(3, minmax(200px, 325px));
+    grid-template-rows: repeat(4, minmax(100px, 150px));
     justify-content: center;
 }
 
@@ -18,8 +18,6 @@ body {
     display: flex;
     border: 1px solid darkgrey;
     border-radius: 10px;
-    width: 320px;
-    height: 120px;
 }
 
 .avatar {
@@ -39,12 +37,11 @@ body {
     padding-left: 15px;
     display: flex;
     flex-wrap: wrap;
+    align-content: space-around;
 }
 
-.email,
-.address {
+.email {
     margin: 0;
-    padding: 0;
 }
 
 .overlay {
@@ -66,11 +63,22 @@ body {
     padding: 30px 20px;
 }
 
+.modal-text-container {
+    .email {
+        padding-top: 15px;
+    }
+}
+
 .modal-close {
     position: absolute;
     right: 15px;
     top: 5px;
     cursor: pointer;
+    background-color: Transparent;
+    background-repeat:no-repeat;
+    border: none;
+    overflow: hidden;
+    outline:none;
 }
 
 .hidden {
