--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -9,9 +9,10 @@ body {
 .grid-container {
     display: grid;
     grid-gap: 80px;
-    grid-template-columns: repeat(3, minmax(200px, 325px));
+    grid-template-columns: repeat(3, minmax(200px, 350px));
     grid-template-rows: repeat(4, minmax(100px, 150px));
     justify-content: center;
+    margin-bottom: 20px;
 }
 
 .card {
