--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -70,6 +70,19 @@ body {
     bottom: 0;
 }
 
+.arrow {
+    display: flex;
+    justify-content: flex-start;
+}
+
+.arrowForward {
+    display: flex;
+    justify-content: flex-end;
+}
+
+
+
+
 .darkbg {
     background-color: rgba(34,34,34,0.5);
     width: 100%;
