Moved function for arrows and altered the code to get them working. Also changed the cursor to pointer on hover for the arrows.

--- a/css/styles.css
+++ b/css/styles.css
@@ -74,10 +74,16 @@ body {
   display: flex;
   justify-content: flex-start;
 }
+.arrow:hover {
+  cursor: pointer;
+}
 
 .arrowForward {
   display: flex;
   justify-content: flex-end;
+}
+.arrowForward:hover {
+  cursor: pointer;
 }
 
 .darkbg {
