--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -73,14 +73,18 @@ body {
 .arrow {
     display: flex;
     justify-content: flex-start;
+    &:hover {
+        cursor: pointer;
+    }
 }
 
 .arrowForward {
     display: flex;
     justify-content: flex-end;
+    &:hover {
+        cursor: pointer;
+    }
 }
-
-
 
 
 .darkbg {
